# otus-python-basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  plane.py
homework_03/: .dockerignore  Dockerfile  main.py  pyproject.toml
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  docker-compose.yaml  requirements.txt
homework_06/application/: config.py  main.py  prestart.sh
